# MASLib

./: CMakeLists.txt  README.md  main.cpp  mainPython.cpp  setup.py  test.py
cpp/: masCone.cpp  simpleMorfComparison.h
data/: Sig0909.txt
data/atmospheric/: IZHEVSK_2_h_line1.csv  IZHEVSK_2_h_line2.csv  IZHEVSK_4_MIN_line1.csv  IZHEVSK_4_MIN_line2.csv
data/explosion/: note  signal0.txt  signal1.txt  vto.txt
include/: masCone.h
python/: moviepy_test.py  sandbox.py
python/experiments/: diplom.py  ex10_matlab_fig.py  ex11_atmospheric.py  ex12_gpuMorf_vs_cpuMorf.py  ex1_cbs.py  ex2_bs_explosion.py  ex3_bs_wav.py  ex4_bs_analysis.py  ex5_wavelet.py  ex6_wavelet_explosion.py  ex7_pywavelet.py  ex8_morfcomparator.py  ex9_morfcomparator_plot.py  pattern_detect_demo.py
python/morfas/: beatspectre.py  cossmatrix.py  cumas.py  morfcomparison.py  shiftspectre.py  tools.py
